ajout site Lidia + PT

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://zoneblanche.org" class="image image-full diapo" title="Cahier d'exercice | Mathieu Delalle" rel="tipsy-e"><img src="images/8.png" alt=""></a>
+											<a href="http://zoneblanche.org" class="image image-full diapo" title="Cahier d'exercices | Mathieu Delalle" rel="tipsy-e"><img src="images/8.png" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="http://www.ouestmedialab.fr" class="image image-full diapo" title="Inventer ensemble les médias de demain" rel="tipsy-n"><img src="images/7.png" alt=""></a>
@@ -95,7 +95,13 @@
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-w"><img src="images/2.png" alt=""></a>
+											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-e"><img src="images/2.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://www.performance-tourisme.com" class="image image-full diapo" title="Performance Tourisme | L'accompagnement des acteurs du tourisme" rel="tipsy-n"><img src="images/13.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://lidiakostanek.com" class="image image-full diapo" title="Lidia Kostanek | artiste" rel="tipsy-w"><img src="images/12.png" alt=""></a>
 										</div>
 									</div>
 								</section>
