--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="fr">
 	<head>
 		<title>Let's Root# | Green Geek | 404</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
