--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="fr">
 	<head>
 		<title>Let's Root# | Green Geek</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -141,6 +141,7 @@
 											</div>
 										</div>
 									</div>
+												<input type="text" id="tel" class="hidden" name="tel" placeholder="Merci de ne pas remplir ce champs pour montrer que vous êtes humain" />
 								</form>
 							</article>
 
